--- a/nodes/klicktipp-login.html
+++ b/nodes/klicktipp-login.html
@@ -1,51 +1,66 @@
 <script type="text/x-red" data-template-name="klicktipp login">
 	<div class="form-row">
-	    <label for="node-input-klicktipp"><i class="fa fa-user"></i><span>KlickTipp Config</span></label>
-	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
-	</div>
-	<div class="form-row">
-	    <label for="node-input-name"><i class="fa fa-tag"></i><span>Name</span></label>
-	    <input type="text" id="node-input-name" placeholder="Enter node name">
-	</div>
+	       <label for="node-input-klicktipp"><i class="fa fa-user"></i><span>KlickTipp Config</span></label>
+	       <input type="text" id="node-input-klicktipp" data-i18n="config node">
+	   </div>
+	   <div class="form-row">
+	       <label for="node-input-name"><i class="fa fa-tag"></i><span>Name</span></label>
+	       <input type="text" id="node-input-name" placeholder="Enter node name">
+	   </div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp login">
 	<p>Logs into the KlickTipp API and retrieves session information required for other API interactions.</p>
-	<h3>Outputs</h3>
-	<dl class="message-properties">
-	    <dt>msg.klicktipp <span class="property-type">object</span></dt>
-	    <dd>
-	        An object containing session information returned after a successful login:
-	        <ul>
-	            <li><code>sessionId</code> - The session ID required for further API interactions.</li>
-	            <li><code>sessionName</code> - The session name (cookie) to be used in subsequent requests.</li>
-	        </ul>
-	    </dd>
-	    <dd>
-	        On success:
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
-	        </ul>
-	    </dd>
-	    <dd>
-	        On failure:
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-	            <li><code>msg.error</code> - An error message indicating why the request failed.</li>
-	        </ul>
-	    </dd>
-	</dl>
-	<h3>Node Status</h3>
-	<ul>
-	    <li><strong>Green (dot)</strong> - Logged in successfully, and the session information is available.</li>
-	    <li><strong>Red (ring)</strong> - Login failed due to an error (e.g., missing credentials or invalid API response).</li>
-	</ul>
-	<h3>Details</h3>
-	<p>This node requires the <strong>KlickTipp Config</strong> node to be configured with a valid username and password.</p>
-	<p>
-	    The session information (session ID and session name) is stored in <code>msg.klicktipp</code> and can be used by other KlickTipp nodes in the flow.
-	    If the login fails, an error message will be returned in <code>msg.error</code>, and <code>msg.payload</code> will contain <code>{ success: false }</code>.
-	</p>
+
+	   <h3>Automatic Logout</h3>
+	   <p>
+	       This node implements an <strong>automatic logout</strong> feature to enhance security and manage session lifecycles. After a successful login, the node schedules an automatic logout to occur after a predefined timeout period (default is <strong>10 minutes</strong>). This helps prevent unused sessions from remaining active indefinitely.
+	   </p>
+	   <p>
+	       If you perform a manual logout using the <strong>KlickTipp Logout</strong> node before the automatic logout occurs, the automatic logout timer will be canceled to prevent redundant logout attempts.
+	   </p>
+	   <p>
+	       The automatic logout ensures that the session is invalidated even if a manual logout is not performed, providing an additional layer of security.
+	   </p>
+
+	   <h3>Outputs</h3>
+	   <dl class="message-properties">
+	       <dt>msg.klicktipp <span class="property-type">object</span></dt>
+	       <dd>
+	           An object containing session information returned after a successful login:
+	           <ul>
+	               <li><code>sessionId</code> - The session ID required for further API interactions.</li>
+	               <li><code>sessionName</code> - The session name (cookie) to be used in subsequent requests.</li>
+	           </ul>
+	       </dd>
+	       <dd>
+	           On success:
+	           <ul>
+	               <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
+	           </ul>
+	       </dd>
+	       <dd>
+	           On failure:
+	           <ul>
+	               <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
+	               <li><code>msg.error</code> - An error message indicating why the request failed.</li>
+	           </ul>
+	       </dd>
+	   </dl>
+	   <h3>Node Status</h3>
+	   <ul>
+	       <li><strong>Green (dot)</strong> - Logged in successfully, and the session information is available.</li>
+	       <li><strong>Red (ring)</strong> - Login failed due to an error (e.g., missing credentials or invalid API response).</li>
+	   </ul>
+	   <h3>Details</h3>
+	   <p>This node requires the <strong>KlickTipp Config</strong> node to be configured with a valid username and password.</p>
+	   <p>
+	       The session information (session ID and session name) is stored in <code>msg.klicktipp</code> and can be used by other KlickTipp nodes in the flow.
+	       If the login fails, an error message will be returned in <code>msg.error</code>, and <code>msg.payload</code> will contain <code>{ success: false }</code>.
+	   </p>
+	   <p>
+	       The automatic logout is scheduled upon successful login and will log out the session after the 10 minutes.
+	   </p>
 </script>
 
 <script type="text/javascript">
