--- a/nodes/subscribers/klicktipp-subscriber-update.html
+++ b/nodes/subscribers/klicktipp-subscriber-update.html
@@ -7,11 +7,12 @@
 	    <label for="node-input-klicktipp"><i class="fa fa-cog"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
-	<div class="form-row">
-	    <label for="node-input-subscriberId"><i class="fa fa-tags""></i> <span>Contact ID</span></label>
-	    <input type="text" id="node-input-subscriberId" placeholder="Enter contact ID (required)">
-	    <input type="hidden" id="node-input-subscriberIdType">
-	</div>
+	 <div class="form-row">
+	   <label for="node-input-subscriberId"><i class="fa fa-tags"></i> <span>Contact ID</span></label>
+	   <input type="text" id="node-input-subscriberId" placeholder="Enter contact ID (required)">
+	   <input type="hidden" id="node-input-subscriberIdType">
+	   <button id="btn-find-contact" type="button">Find Contact ID</button>
+	 </div>
 	<div class="form-row">
 	    <label for="node-input-newEmail"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
 	    <input type="text" id="node-input-newEmail" placeholder="Enter email address">
@@ -28,6 +29,22 @@
 	    <input type="hidden" id="node-input-fieldsType">
 	</div>
 	<div id="contact-fields-section" class="form-row" style="display: none"></div>
+</script>
+
+<script type="text/html" id="modal-find-contact">
+	<div class="form-row">
+		<div id="find-contact-modal" style="display: flex; align-items: center;">
+			<label for="find-contact-email" style="padding-right: 8px; white-space: nowrap;">
+				<i class="fa fa-envelope"></i> <span>Email Address</span>
+			</label>
+			<input
+				type="text"
+				id="find-contact-email"
+				placeholder="Enter email address (required)"
+				style="flex: 1;"
+			/>
+		</div>
+	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-update">
@@ -165,6 +182,87 @@
 				this.fieldsData,
 				this.id,
 			);
+
+			// Click handler for "Find Contact ID" button
+			$('#btn-find-contact').on('click', function () {
+				// Get modal content from the hidden template.
+				var modalContent = $('#modal-find-contact').html();
+				// Create a temporary container and open it as a dialog.
+				var $dialog = $('<div></div>')
+					.html(modalContent)
+					.dialog({
+						modal: true,
+						title: 'Find Contact ID',
+						width: 400,
+						buttons: {
+							OK: function () {
+								var $thisDialog = $(this);
+								var email = $thisDialog.find('#find-contact-email').val();
+								if (!email) {
+									RED.notify('Please enter an email address', 'error');
+									return;
+								}
+								// Retrieve the config node id from the config input field.
+								var configId = $('#node-input-klicktipp').val();
+								if (!configId) {
+									RED.notify('Missing KlickTipp Config', 'error');
+									return;
+								}
+								$.ajax({
+									url: '/klicktipp/contactSearch?configId=' + encodeURIComponent(configId),
+									method: 'POST',
+									dataType: 'json',
+									data: { email: email },
+									success: function (response) {
+										if (response && response[0]) {
+											var id = response[0];
+											// Update the hidden type field so that the widget uses "num"
+											$('#node-input-subscriberIdType').val('num');
+
+											// Locate the old input element.
+											var $oldInput = $('#node-input-subscriberId');
+
+											// Create a new input element with the same id, placeholder, and set its value.
+											var $newInput = $(
+												'<input type="text" id="node-input-subscriberId" placeholder="Enter contact ID (required)" value="' +
+													id +
+													'" style="width: 393px' +
+													'">',
+											);
+
+											// Replace the old input with the new input, preserving its placement.
+											$oldInput.replaceWith($newInput);
+
+											// Reinitialize the typed input widget on the new element.
+											ktInitializeTypedInput(
+												'#node-input-subscriberId',
+												'#node-input-subscriberIdType',
+												'num',
+												['num'],
+											);
+
+											// Trigger a change event.
+											$newInput.trigger('change');
+
+											$thisDialog.dialog('close');
+										} else {
+											RED.notify('Contact not found', 'error');
+										}
+									},
+									error: function (err) {
+										RED.notify('Error: ' + err.responseText, 'error');
+									},
+								});
+							},
+							Cancel: function () {
+								$(this).dialog('close');
+							},
+						},
+						close: function () {
+							$(this).remove();
+						},
+					});
+			});
 		},
 		oneditsave: function () {
 			// Collect all field from API vales and store them in this.fieldsData
